--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <groupId>com.github.jitpack</groupId>
   <artifactId>maven-simple</artifactId>
   <version>0.2-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <packaging>war</packaging>
 
   <name>Simple Maven example</name>
