--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
- 
-  
   <groupId>com.github.jitpack</groupId>
-<artifactId>maven-simple</artifactId>
-<version>2.0</version>
-<packaging>war</packaging>
+  <artifactId>maven-simple</artifactId>
+  <version>0.2-SNAPSHOT</version>
+  <packaging>jar</packaging>
+ 
 
   <name>Simple Maven example</name>
   <url>https://jitpack.io/#jitpack/maven-simple/0.1</url>
